--- a/flutter_app/myapp/pubspec.yaml
+++ b/flutter_app/myapp/pubspec.yaml
@@ -21,6 +21,8 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  firebase_auth: ^0.18.1+2
+  firebase_core: ^0.5.0+1
   flutter:
     sdk: flutter
 
@@ -28,6 +30,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+
 
 dev_dependencies:
   flutter_test:
