--- a/flutter_app/myapp/pubspec.yaml
+++ b/flutter_app/myapp/pubspec.yaml
@@ -53,6 +53,7 @@ flutter:
   - images/alert.png
   - images/check_status.png
   - images/setting.png
+  - images/2-logo-2.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
