--- a/flutter_app/myapp/pubspec.yaml
+++ b/flutter_app/myapp/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  firebase_database: ^4.3.0
   firebase_auth: ^0.18.1+2
   firebase_core: ^0.5.0+1
   flutter:
