--- a/flutter_app/alarmsystem/pubspec.yaml
+++ b/flutter_app/alarmsystem/pubspec.yaml
@@ -1,4 +1,4 @@
-name: myapp
+name: alarmsystem
 description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
@@ -26,6 +26,8 @@ dependencies:
   firebase_core: ^0.5.0+1
   flutter:
     sdk: flutter
+  firebase_messaging:
+  flutter_local_notifications:
 
 
   # The following adds the Cupertino Icons font to your application.
